--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "mongodb": "^2.2.30",
+    "mongoose": "^4.11.3",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
